:white_check_mark: Add functions of authentication
