# internal/interfaces/api/middleware/auth_middleware.go
@@ -2,6 +2,7 @@ package middleware
 
 import (
 	"net/http"
+	"strings"
 
 	"github.com/135yshr/ctfsendai2024/internal/domain/repositories"
 	"github.com/gin-gonic/gin"
@@ -18,7 +19,7 @@ func AuthMiddleware(authRepo repositories.AuthRepository) gin.HandlerFunc {
 		}
 
 		// トークン検証ロジック
-		auth, err := authRepo.ValidateToken(token)
+		auth, err := authRepo.ValidateToken(strings.Replace(token, "Bearer ", "", 1))
 		if err != nil {
 			c.JSON(http.StatusUnauthorized, gin.H{"error": "無効なトークンです"})
 			c.Abort()
